2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):
	Only remove files when the location is about to be umounted,
	or is umounted (Closes: #574097)

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/plugins/dbus-service/Makefile.am:
	* src/plugins/dbus-service/dbus-service.py:
	* src/plugins/dbus-service/dbus-service.totem-plugin.in: Added a
	D-Bus Service plugin by Lucky <lucky1.data@gmail.com>.
	(Closes: #576016)

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (new_from_stream_thread),
	(totem_gdk_pixbuf_new_from_stream_at_scale_async),
	(totem_gdk_pixbuf_new_from_stream_async),
	(totem_gdk_pixbuf_new_from_stream_finish), (thumbnail_loaded_cb),
	(thumbnail_opened_cb): Temporarily copy functions from bug #575900
	into the YouTube plugin in lieu of them being committed.

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_can_play_youtube_videos):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_can_play_youtube_videos):
	* src/backend/bacon-video-widget.h:
	* src/plugins/youtube/Makefile.am:
	* src/plugins/youtube/totem-youtube.c
	(totem_youtube_plugin_class_init), (totem_youtube_plugin_init),
	(set_up_tree_view), (impl_activate), (impl_deactivate),
	(get_fmt_param), (progress_bar_pulse_cb), (set_progress_bar_text),
	(increment_progress_bar_fraction), (resolve_t_param_cb),
	(resolve_t_param), (thumbnail_loaded_cb), (thumbnail_opened_cb),
	(query_finished_cb), (query_progress_cb), (execute_query),
	(search_button_clicked_cb), (search_entry_activate_cb),
	(load_related_videos), (notebook_switch_page_cb),
	(open_in_web_browser_activate_cb), (value_changed_cb),
	(button_press_event_cb), (button_release_event_cb),
	(starting_video_cb):
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.totem-plugin.in: