@@ -49,7 +49,6 @@ typedef struct
 	gboolean quit;
 	gboolean enqueue;
 	gboolean replace;
-	gboolean printplaying;
 	gboolean notconnectexistingsession;
 	gdouble playlistidx;
 	gint64 seek;
